# msadmin-users

./: .coverage  .gitignore  Dockerfile  HELP.md  README.md  compose.yaml  example.env  pom.xml  pyproject.toml  pytest.ini  requirements.txt
Account/: JWTValidator.py  apps.py  models.py  processrabbitmq.py  rabbitmq.py  serializers.py  urls.py  views.py
Account/migrations/: 0001_initial.py  0002_alter_account_password.py  0002_alter_credentials_email_alter_credentials_password.py  0002_remove_permissions_operation_permissions_can_modify_and_more.py  0002_rename_cedula_account_id_card.py  0003_alter_account_role.py  0003_alter_permissions_idpermissions.py
Permissions/: apps.py  models.py
Permissions/migrations/: 0001_initial.py  0002_alter_permissions_idaccount.py
config/: settings.py  urls.py
db/: init.sql
src/main/java/com/codecrafters/msadminusers/: MsadminUsersApplication.java
src/main/java/com/codecrafters/msadminusers/DTO/: LoginDto.java  SignUpDto.java
src/main/java/com/codecrafters/msadminusers/config/: JwtAuthenticationFilter.java  SecurityConfig.java
src/main/java/com/codecrafters/msadminusers/controller/: AuthController.java  userController.java
src/main/java/com/codecrafters/msadminusers/dao/request/: SignUpRequest.java  SigninRequest.java
src/main/java/com/codecrafters/msadminusers/dao/response/: JwtAuthenticationResponse.java
src/main/java/com/codecrafters/msadminusers/domain/: Account.java  Credentials.java  Module.java  Operation.java  Permissions.java  Rol.java
src/main/java/com/codecrafters/msadminusers/repository/: CredentialsRepository.java  RoleRepository.java  UserRepository.java
src/main/java/com/codecrafters/msadminusers/service/: AuthenticationService.java  JwtService.java  UserService.java
src/main/java/com/codecrafters/msadminusers/service/impl/: AuthenticationServiceImpl.java  JwtServiceImpl.java  UserServiceImpl.java
src/main/resources/: application.properties
src/test/java/com/codecrafters/msadminusers/: MsadminUsersApplicationTests.java
test/: test_view.py
